# riceyz

./: .gitignore  CONTRIBUTING.md  PLUGINS.md  PROTOCOL.md  README.md  index.html  launcher.html  toast.html  tokens.example.json
css/: batcave-discord.css  launcher.css  style.css  toast.css
extension/: background.js  manifest.json
host/: Cargo.toml  task_status.txt
host/src/: apps.rs  audio.rs  browser.rs  github.rs  icons.rs  main.rs  media.rs  mft.rs  net.rs  notifications.rs  notion.rs  plugins.rs  proc.rs  specs.rs  spotify.rs  tabs.rs  viz.rs
js/: dashboard.js  launcher.js  toast.js
plugins/sample/: index.js  plugin.json
ui-template/: README.md  index.html  launcher.html  toast.html
ui-template/css/: launcher.css  style.css  toast.css
ui-template/js/: dashboard.js  launcher.js  toast.js
