[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
global-hotkey = "0.8.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
raw-window-handle = "0.6.2"
rfd = "0.17.2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
rustfft = "6.4.1"
serde_json = "1.0.150"
sysinfo = "0.39.5"
tao = "0.35.3"
tiny_http = "0.12.0"
ureq = "2"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Threading", "Media_Control", "Foundation", "Foundation_Collections", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_UI_Shell_PropertiesSystem", "UI_Notifications", "UI_Notifications_Management", "ApplicationModel", "Win32_Graphics_Dwm", "Win32_UI_Input_KeyboardAndMouse", "Win32_Storage_Xps", "Win32_System_Ioctl", "Win32_System_IO", "Win32_Storage_FileSystem", "Win32_UI_Shell"] }
windows-future = "0.3.2"
wry = "0.55.1"
